--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "recharts": "^2.15.1",
+    "styled-components": "^6.1.17",
     "sweetalert2": "^11.17.2",
     "web-vitals": "^2.1.4"
   },
